# pytypelevel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
pytypelevel/: __init__.py  annotations.py  typeclasses.py
pytypelevel/kernel/: __init__.py  band.py  bounded_semilattice.py  commutative_group.py  commutative_monoid.py  commutative_semigroup.py  enumerable.py  eq.py  group.py  hash.py  monoid.py  order.py  partial_order.py  semigroup.py  semilattice.py
tests/: conftest.py  test_band.py  test_bounded_semilattice.py  test_commutative_group.py  test_commutative_monoid.py  test_commutative_semigroup.py  test_enumerable.py  test_eq.py  test_group.py  test_hash.py  test_monoid.py  test_order.py  test_partial_order.py  test_semigroup.py  test_semilattice.py
