[tool.poetry]
name = "pytypelevel"
version = "0.1.0"
description = ""
authors = ["David Sillman <dsillman2000@gmail.com>"]
packages = [{ include = "pytypelevel" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
